Sam Gladson - Modified Test and Added a new file to trigger test manually in Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          build: npm run test
+          build: npm run test:chrome
         #  start: npm start
