--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "main": "index.js",
   "scripts": {
     "scripts":"cypress run",
+    "chrome:headed": "cypress run --browser chrome --headed",
+    "chrome": "cypress run --browser chrome",
+    "firefox:headed": "cypress run --browser firefox --headed",
+    "firefox": "cypress run --browser firefox ",
+    "electron:headed": "cypress run --headed",
     "clean:reports":"rm -rf cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports",
     "pretest" : "npm run clean:reports",
     "combine-reports": "mochawesome-merge ./cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
     "generate-reports":"marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
     "posttest":"npm run combine-reports && npm run generate-reports",
-    "test": "npm run scripts || npm run posttest" 
+    "test:electron": "npm run scripts || npm run posttest",
+    "test:chrome:headed": "npm run chrome:headed || npm run posttest",
+    "test:chrome": "npm run chrome || npm run posttest",
+    "test:firefox:headed": "npm run firefox:headed || npm run posttest",
+    "test:firefox": "npm run firefox || npm run posttest",
+    "test:electron:headed": "npm run electron:headed || npm run posttest"
   },
   "keywords": [],
   "author": "",
