--- a/.github/workflows/RunTest.yml
+++ b/.github/workflows/RunTest.yml
@@ -19,10 +19,14 @@ on:
 jobs:
   test:
     timeout-minutes: 60
-    runs-on: windows-latest
+    runs-on: macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+    - name: Install Dependencies
+      run: npm ci
+    - name: Install Cypress
+      run: npm install cypress
     - name: Run Cypress tests on ${{inputs.Browser}} Browser in ${{inputs.Headed}} Headed mode
       if: ${{inputs.Headed}}
       run: npm run test:${{inputs.Browser}}:headed
