--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,9 @@ jobs:
         uses: actions/checkout@v4
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
+      - name: Install Dependencies
+        run: npm ci
+      - name: Install Cypress
+        run: npm install ypress
       - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
-          build: npm run test:chrome
+        run: npm run test:chrome
