--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Install Cypress
-        run: npm install ypress
+        run: npm install cypress
       - name: Cypress run
         run: npm run test:chrome
